src/test/resources/bad/custom/005-assign-to-length.lat
int main() {
    int [] arr = new int[10];
    arr.length = 3;
    return 0;
}
